--- a/atelier.ipynb
+++ b/atelier.ipynb
@@ -137,19 +137,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be3c79c1-0d94-4c71-858c-5811f18077ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TROUVER AUTRE EX\n",
-    "url = 'https://gallica.bnf.fr/SRU?version=1.2&operation=searchRetrieve&query=gallica%20all%20%22FESTAC%22%20sortby%20ocr.quality/sort.descending&filter=dc.type%20all%20%22fascicule%22%20and%20dc.language%20all%20%22fre%22%20and%20dc.date%20%3E=%20%221976%22'\n",
-    "response = requests.get(url)\n",
-    "print(response.text)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "952e2597-621a-49e1-a5eb-282bae4e90e9",
    "metadata": {},
@@ -191,7 +178,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "url = \"https://gallica.bnf.fr/SRU?version=1.2&operation=searchRetrieve&query=dc.creator%20all%20%22jules%20verne%22%20sortby%20ocr.quality/sort.descending&filter=dc.type%20all%20%22monographie%22%20and%20dc.language%20all%20%22fre%22&maximumRecords=5\"\n",
+    "url = 'https://gallica.bnf.fr/SRU?version=1.2&operation=searchRetrieve&query=gallica%20all%20%22Festival%20Mondial%20des%20Arts%20N%C3%A8gres%22%20sortby%20ocr.quality/sort.descending&filter=dc.type%20all%20%22monographie%22%20and%20dc.language%20all%20%22fre%22%20and%20dc.date=%221966%22&maximumRecords=3'\n",
     "response = requests.get(url)\n",
     "response.raise_for_status() # Appeler raise_for_status() après une requête GET est une bonne pratique : cela permet de lever automatiquement une exception si la requête a échoué.\n",
     "print(type(response), response)"
@@ -215,6 +202,16 @@
    "outputs": [],
    "source": [
     "response.headers['Content-Type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e1c0c1-3e78-4e07-aa32-36639d0b68b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
    ]
   },
   {
@@ -277,6 +274,16 @@
     "- `creator`\n",
     "\n",
     "NB. La méthode [`Element.findall()`](https://docs.python.org/3/library/xml.etree.elementtree.html#xml.etree.ElementTree.Element.findall) ne trouve que les éléments avec une balise qui sont des enfants directs de l'élément courant.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcd1d9e2-ae8f-49f6-b535-8c716054142b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas"
    ]
   },
   {
@@ -468,6 +475,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c993c07-fa72-4734-ad92-8496def6f806",
+   "metadata": {},
+   "source": [
+    "### Installation et importation d'un pipeline "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f6f86b1-d95b-44bb-b37b-a418cf64d890",
@@ -492,9 +507,7 @@
     "\n",
     "Les capacités d'un pipeline de traitement dépendent toujours des composants, de leurs modèles et de la manière dont ils ont été formés. Par exemple, un pipeline de reconnaissance d'entités nommées doit inclure un composant de reconnaissance d'entités nommées formé.\n",
     "\n",
-    "Il convient de se référer à la documentation des modèles mis à disposition : [https://spacy.io/models](https://spacy.io/models)\n",
-    "\n",
-    "#### Installation et importation d'un pipeline "
+    "Il convient de se référer à la documentation des modèles mis à disposition : [https://spacy.io/models](https://spacy.io/models)\n"
    ]
   },
   {
@@ -504,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!conda install -c conda-forge spacy-model-fr_core_news_md"
+    "!conda install -c conda-forge spacy-model-fr_core_news_md"
    ]
   },
   {
@@ -748,7 +761,7 @@
     "\n",
     "Chaque page de Wikipédia en français devient donc une **ressource RDF** dans le graphe, qui possède une **URI** et qui est enrichie de nombreuses **métadonnées**.\n",
     "\n",
-    "Par exemple, la page Wikipédia de l'École Nationale des Chartes est transformée une ressources RDF dont l'URI (qui est ici un URL) est :\n",
+    "Par exemple, la page Wikipédia de l'École nationale des chartes – PSL est transformée une ressources RDF dont l'URI (qui est ici un URL) est :\n",
     "> http://fr.dbpedia.org/resource/École_nationale_des_chartes\n",
     "\n",
     "Si l'on va à cet URL dans un navigateur Web, on peut voir un résumé de toutes les triplets RDF associés à cette ressource.\n",
@@ -756,27 +769,27 @@
     "Mais comment trouve-t-on l'URI d'un lieu dans DBPediaFR à partir de son nom ?\n",
     "Pour cela, on peut utiliser l'outil open source  [https://fr.dbpedia.org/lookup.html](https://fr.dbpedia.org/lookup.html), qui permet justement de faire cette recherche ! \n",
     "\n",
-    "<div style=\"border-top: 1px solid #ff9800; padding: 10px; border-radius: 5px; color:#ff9800;\"><strong>🧩 - QUESTION 1 - ⭐</strong></div>\n",
+    "<div style=\"border-top: 1px solid #ff9800; padding: 10px; border-radius: 5px; color:#ff9800;\"><strong>QUESTION</strong></div>\n",
     "\n",
-    "En utilisant l'outil DBPediaFR lookup (https://fr.dbpedia.org/lookup.html), recherchez le lieu <span class =\"renbox loc\">Staffordshire<sup>[LIEU]</sup></span>.\n",
+    "En utilisant l'outil DBPediaFR lookup (https://fr.dbpedia.org/lookup.html), recherchez le lieu <span class =\"renbox loc\">Dakar<sup>[LIEU]</sup></span>.\n",
     "Rendez-vous sur la page de présentation de la meilleure resource identifiée, et recherchez parmi les triplets associés s'il y a des coordonnées géographiques. \n",
     "\n",
     "Quel sont les noms et les préfixes RDF des propriétés utilisées pour décrire ces informations géographiques ? Notez les dans un coin, vous en aurez besoin plus tard !\n",
     "\n",
     "<div style=\"border-bottom: 1px solid #ff9800; padding: 10px; border-radius: 5px; margin-top: -30px;\"></div>\n",
     "\n",
-    "Vous venez de tester à la main la première étape de la  résolution de toponymes grâce à DBPedia Lookup.\n",
-    "Le but va maintenant être d'automatiser ce processus !\n",
+    "Vous venez de tester à la main la première étape de la  résolution de toponymes grâce à DBPedia Lookup.  \n",
+    "**Le but va maintenant être d'automatiser ce processus !**\n",
     "\n",
     "\n",
     "### Résoudre un toponyme avec l'API de DBPedia Lookup\n",
     "\n",
     "[DPBedia Lookpup](https://github.com/dbpedia/dbpedia-lookup) va être très utile car son instance officielle [https://lookup.dbpedia.org/](https://fr.dbpedia.org/lookup.html) mets à disposition une API REST qui permet de l'interroger avec une simple URL.\n",
     "\n",
-    "Par exemple pour récupérer les meilleurs candidats pour le toponym *Staffordshire*, il suffit d'appeler : \n",
+    "Par exemple pour récupérer les meilleurs candidats pour le toponyme *Dakat*, il suffit d'appeler : \n",
     "\n",
     "\n",
-    ">https://fr.dbpedia.org/lookup/api/search?query=Staffordshire\n"
+    ">https://fr.dbpedia.org/lookup/api/search?query=Dakar\n"
    ]
   },
   {
@@ -805,7 +818,7 @@
     "\n",
     "Dans votre navigateur Web préféré, allez à l'URL suivante et vérifiez si les résultats renvoyés par l'API semblent correspondre à ce que vous obteniez avec la version graphique de DBPediaFR Lookup :\n",
     "\n",
-    "> https://fr.dbpedia.org/lookup/api/search?query=Staffordshire&format=JSON\n",
+    "> https://fr.dbpedia.org/lookup/api/search?query=Dakar&format=JSON\n",
     " \n"
    ]
   },
@@ -818,7 +831,7 @@
    "source": [
     "# Exécutez-moi ! 🚀\n",
     "\n",
-    "! curl -s \"https://fr.dbpedia.org/lookup/api/search?query=Staffordshire&format=JSON\" # -s pour le mode silencieux et ne pas afficher la progression de la requête"
+    "! curl -s \"https://fr.dbpedia.org/lookup/api/search?query=Dakar&format=JSON\" # -s pour le mode silencieux et ne pas afficher la progression de la requête"
    ]
   },
   {
@@ -854,7 +867,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "url = \"https://fr.dbpedia.org/lookup/api/search?query=Staffordshire&format=JSON\"\n",
+    "url = \"https://fr.dbpedia.org/lookup/api/search?query=Dakar&format=JSON\"\n",
     "response = requests.get(url)\n",
     "#response.headers['Content-Type']\n",
     "response.raise_for_status() # Appeler raise_for_status() après une requête GET est une bonne pratique : cela permet de lever automatiquement une exception si la requête a échoué.\n",
@@ -925,7 +938,7 @@
    "outputs": [],
    "source": [
     "# Exécutez-moi ! 🚀\n",
-    "! curl -s \"https://fr.dbpedia.org/lookup/api/search?query=Staffordshire&format=JSON\" | jq \".docs[0].resource\" # jq est un utilitaire bash pour manipuler du JSON, très très pratique !"
+    "! curl -s \"https://fr.dbpedia.org/lookup/api/search?query=Dakar&format=JSON\" | jq \".docs[0].resource\" # jq est un utilitaire bash pour manipuler du JSON, très très pratique !"
    ]
   },
   {
@@ -954,28 +967,6 @@
     "        return None\n",
     "    else:\n",
     "        return r[0].get(\"resource\")[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d8221e6-c2c3-41d2-b4a0-e657b2f9e78b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exécutez-moi ! 🚀\n",
-    "\n",
-    "t = \"Staffordshire\"\n",
-    "r = dbpedia_top1(t)\n",
-    "\n",
-    "# La réponse doit être l'URI attendue, sous forme de chaîne de caractères\n",
-    "assert [isinstance(r, str), r == \"http://f.dbpedia.org/resource/Staffordshire\"]\n",
-    "\n",
-    "t = \"Cette ressource n'existe pas \"\n",
-    "r = dbpedia_top1(t)\n",
-    "\n",
-    "# Une resource inexistante doit retourner None, pas provoquer d'erreur\n",
-    "assert r is None"
    ]
   },
   {
@@ -1010,7 +1001,7 @@
     "! curl -s -X POST \\\n",
     "-H \"Content-Type: application/sparql-query\" \\\n",
     "-H \"Accept: application/json\" \\\n",
-    "--data '''PREFIX geo: <http://www.w3.org/2003/01/geo/wgs84_pos#> SELECT ?lat ?long WHERE { <http://fr.dbpedia.org/resource/Staffordshire> (geo:lat) ?lat ; (geo:long) ?long. }''' \\\n",
+    "--data '''PREFIX geo: <http://www.w3.org/2003/01/geo/wgs84_pos#> SELECT ?lat ?long WHERE { <http://fr.dbpedia.org/resource/Dakar> (geo:lat) ?lat ; (geo:long) ?long. }''' \\\n",
     "  http://fr.dbpedia.org/sparql \\\n",
     "  | jq #On passe le résultat à jq pour le formater proprement"
    ]
@@ -1092,19 +1083,10 @@
    "source": [
     "# Exécutez-moi !   🚀\n",
     "\n",
-    "uri = \"http://fr.dbpedia.org/resource/Staffordshire\"\n",
+    "uri = \"http://fr.dbpedia.org/resource/Dakar\"\n",
     "\n",
     "coordonnees = geocode(uri)\n",
-    "print(f\"{uri=} => {coordonnees=}\")\n",
-    "\n",
-    "assert all(\n",
-    "    [\n",
-    "        isinstance(coordonnees, tuple),\n",
-    "        len(coordonnees) == 2,\n",
-    "        all(isinstance(x, float) for x in coordonnees),\n",
-    "        coordonnees == (52.8333, -2.0),\n",
-    "    ]\n",
-    ")"
+    "print(f\"{uri=} => {coordonnees=}\")\n"
    ]
   },
   {
@@ -1194,7 +1176,7 @@
     "    texte = file.read()\n",
     "\n",
     "doc = nlp(texte)\n",
-    "display.HTML(displacy.render(doc, style=\"ent\", jupyter=False, page=True))\n"
+    "display.HTML(displacy.render(doc[3200:3500], style=\"ent\", jupyter=False, page=True))\n"
    ]
   },
   {
@@ -1259,7 +1241,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exécutez-moi ! 🚀\n",
     "def geocode_texte(\n",
     "    text: str, nlp: spacy.language.Language\n",
     ") -> tuple[list[str], list[tuple[float, float]]]:\n",
@@ -1272,11 +1253,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0e2b3dce-b08a-4d0e-8b50-a34c3abee5fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc, coordonnees = geocode_texte(texte, nlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba702dee-9790-4097-b296-7c303412ac18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordonnees_filtered = list(filter(lambda sub : not all(ele == None for ele in sub), coordonnees))\n",
+    "coordonnees = coordonnees_filtered\n",
+    "print(coordonnees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96025267-0601-4b48-abfe-d23499572b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8a86249e-b872-4e86-a088-8bed74b85a93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pandas\n",
     "import pandas as pd"
    ]
   },
@@ -1288,7 +1300,7 @@
    "outputs": [],
    "source": [
     "from collections import Counter\n",
-    "pd.set_option('display.max_rows', 200)\n",
+    "pd.set_option('display.max_rows', 200) # AUgmenter le nombre par défaut de lignes affichées\n",
     "\n",
     "loc_dict = dict(Counter(loc)) # dédoublonner la liste des lieux avec un compteur, dans un dict\n",
     "# ajouter les coordonnées de chaque lieu dans le dict\n",
@@ -1297,6 +1309,7 @@
     "# ajouter url et coordonnées pour chaque lieu\n",
     "df = pd.DataFrame.from_dict(loc_dict, orient='index',\n",
     "                           columns=['occs', 'db_pedia', 'coordinates'])\n",
+    "df = df[df.coordinates != (None, None)] # on sort les lieux sans coordonnées\n",
     "df"
    ]
   },
@@ -1379,8 +1392,8 @@
     "# Exécutez-moi ! 🚀\n",
     "\n",
     "coordonnees_valides = [(lat, long) for lat, long in coordonnees if lat and long]\n",
-    "\n",
-    "print(\"Coordonnées valides :\", len(coordonnees_valides), \"/\", len(coordonnees))"
+    "print(coordonnees_valides)\n",
+    "#print(\"Coordonnées valides :\", len(coordonnees_valides), \"/\", len(coordonnees))"
    ]
   },
   {
